# python-exercises-generator

./: .env.sample  .gitignore  README.md  cli.py  distillation.py  exercises.py  finetune.py  finetune_data.py  generation.py  generators.py  helpers.py  main.py  modal_app.py  modal_finetune.py  modal_inference.py  modal_vllm.py  openai_finetune.py  pyproject.toml
.claude/: settings.local.json
prompts/: extract_style.md  two_shot.md  with_style_1.md
prompts/distillation/: default.md
prompts/finetune/: default.md
prompts/generation/: default.md  with_style_1.md  with_style_2.md
src/python_exercises_generator/: __init__.py  cli.py  config.py  paths.py  prompts.py
src/python_exercises_generator/distillation/: __init__.py  distiller.py
src/python_exercises_generator/exercises/: __init__.py  repository.py
src/python_exercises_generator/finetune/: __init__.py  data.py  openai.py  trainer.py
src/python_exercises_generator/generation/: __init__.py  generator.py
src/python_exercises_generator/integrations/: llm.py  modal_app.py
