[project]
name = "python-exercises-generator"
version = "0.1.0"
description = "Explore ways to automatically generate programming exercises using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "rich>=14.2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
