[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-exercises-generator"
version = "0.1.0"
description = "Explore ways to automatically generate programming exercises using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "rich>=14.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
finetune = [
    "bitsandbytes>=0.49.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2025.12.9",
    "wandb>=0.23.1",
]

[project.scripts]
python-exercises-generator = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "distillation",
    "exercises",
    "finetune",
    "generation",
    "helpers",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
